Updated swagger api
