# src/api/swagger/models/PartnerDto.ts
@@ -1,0 +1,96 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * NKM PKM Coupon Api
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: v1
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime';
+import {
+    PartnerContactDto,
+    PartnerContactDtoFromJSON,
+    PartnerContactDtoFromJSONTyped,
+    PartnerContactDtoToJSON,
+} from './';
+
+/**
+ * 
+ * @export
+ * @interface PartnerDto
+ */
+export interface PartnerDto {
+    /**
+     * 
+     * @type {string}
+     * @memberof PartnerDto
+     */
+    name?: string | null;
+    /**
+     * 
+     * @type {number}
+     * @memberof PartnerDto
+     */
+    registrationNumber?: number;
+    /**
+     * 
+     * @type {number}
+     * @memberof PartnerDto
+     */
+    taxNumber?: number;
+    /**
+     * 
+     * @type {number}
+     * @memberof PartnerDto
+     */
+    bankAccount?: number;
+    /**
+     * 
+     * @type {Array<PartnerContactDto>}
+     * @memberof PartnerDto
+     */
+    contacts?: Array<PartnerContactDto> | null;
+}
+
+export function PartnerDtoFromJSON(json: any): PartnerDto {
+    return PartnerDtoFromJSONTyped(json, false);
+}
+
+export function PartnerDtoFromJSONTyped(json: any, ignoreDiscriminator: boolean): PartnerDto {
+    if ((json === undefined) || (json === null)) {
+        return json;
+    }
+    return {
+        
+        'name': !exists(json, 'name') ? undefined : json['name'],
+        'registrationNumber': !exists(json, 'registrationNumber') ? undefined : json['registrationNumber'],
+        'taxNumber': !exists(json, 'taxNumber') ? undefined : json['taxNumber'],
+        'bankAccount': !exists(json, 'bankAccount') ? undefined : json['bankAccount'],
+        'contacts': !exists(json, 'contacts') ? undefined : (json['contacts'] === null ? null : (json['contacts'] as Array<any>).map(PartnerContactDtoFromJSON)),
+    };
+}
+
+export function PartnerDtoToJSON(value?: PartnerDto | null): any {
+    if (value === undefined) {
+        return undefined;
+    }
+    if (value === null) {
+        return null;
+    }
+    return {
+        
+        'name': value.name,
+        'registrationNumber': value.registrationNumber,
+        'taxNumber': value.taxNumber,
+        'bankAccount': value.bankAccount,
+        'contacts': value.contacts === undefined ? undefined : (value.contacts === null ? null : (value.contacts as Array<any>).map(PartnerContactDtoToJSON)),
+    };
+}
+
+
